welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:4: error: illegal start of simple expression
	T=[1]
          ^