welcome.lessons.welcome.array.golomb.Golomb.scala.code
def golomb(num:Int): Int = {
	var Nieme=2
	var T=new Array[Int]
	T=[1]
	T(Nieme)=T(Nieme-1)+1
	{
		for (i<-0 to T(Nieme)-1){
			T(Nieme+i)=Nieme
		}
		Nieme+=T(Nieme)
	}
	return T(Nieme)
}
